Bug 337760 - test failure on arm
Summary: test failure on arm
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kcrash
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-24 08:04 UTC by Jonathan Riddell
Modified: 2015-10-03 21:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2014-07-24 08:04:38 UTC
We get a test failure on our armhf platform.  It looks to be related to this platform not supporting openGL, only openGLES.

https://launchpadlibrarian.net/179933792/buildlog_ubuntu-utopic-armhf.kcrash_5.0.0-0ubuntu1_FAILEDTOBUILD.txt.gz

********* Start testing of KCrashTest *********
Config: Using QtTest library 5.3.0, Qt 5.3.0
PASS   : KCrashTest::initTestCase()
QDEBUG : KCrashTest::testAutoRestart() "libEGL warning: GLX/DRI2 is not supported
libEGL warning: DRI2: failed to create any config
Could not find drkonqi at /usr/lib/arm-linux-gnueabihf/libexec/drkonqi
QStandardPaths: XDG_RUNTIME_DIR not set, defaulting to '/tmp/runtime-buildd'
KCrash: Attempting to start /build/buildd/kcrash-5.0.0/obj-arm-linux-gnueabihf/autotests/test_crasher from kdeinit
Warning: connect() failed: : No such file or directory
KCrash: Attempting to start /build/buildd/kcrash-5.0.0/obj-arm-linux-gnueabihf/autotests/test_crasher directly
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = test_crasher path = /build/buildd/kcrash-5.0.0/obj-arm-linux-gnueabihf/autotests pid = 12724
KCrash: Arguments: /build/buildd/kcrash-5.0.0/obj-arm-linux-gnueabihf/autotests/test_crasher AR 
"
FAIL!  : KCrashTest::testAutoRestart() Compared values are not the same
   Actual   (QString(logData))       : "starting AR\n"
   Expected (QString(expectedOutput)): "starting AR\nautorestarted AR\n"
   Loc: [../../autotests/kcrashtest.cpp(76)]
PASS   : KCrashTest::testEmergencySave()
PASS   : KCrashTest::cleanupTestCase()
Totals: 3 passed, 1 failed, 0 skipped
********* Finished testing of KCrashTest *********
Comment 1 David Faure 2015-10-03 19:56:42 UTC
Fixed today, was not ARM specific, but related to kdeinit being available (which it's not on CI)

https://git.reviewboard.kde.org/r/125503/
Comment 2 David Faure 2015-10-03 21:03:12 UTC
Git commit 2429a8f0696870246f2df6a7239144450a60b1f5 by David Faure.
Committed on 03/10/2015 at 20:27.
Pushed by dfaure into branch 'master'.

KCrash: pass cwd to kdeinit when auto-restarting the app via kdeinit.

This was the reason why the unittest failed locally (with kdeinit available)
while it worked in CI (without kdeinit). The cwd was wrong so the restarted
program was adding a line to $HOME/kcrashtest_log instead of the one here.
REVIEW: 125503

M  +11   -1    src/kcrash.cpp

http://commits.kde.org/kcrash/2429a8f0696870246f2df6a7239144450a60b1f5