KCrash: pass cwd to kdeinit when auto-restarting the app via kdeinit.

This was the reason why the unittest failed locally (with kdeinit available)
while it worked in CI (without kdeinit). The cwd was wrong so the restarted
program was adding a line to $HOME/kcrashtest_log instead of the one here.

BUG: 337760
REVIEW: 125503